<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:gravity="left"
                android:textColor="#37474F"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="@string/license_header"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:textColor="#78909C"
                android:text="@string/license_text"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:gravity="left"
                android:textColor="#78909C"
                android:textStyle="bold"
                android:text="@string/material_drawer_header"/>
            <TextView
                android:id="@+id/material_drawer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textColor="#37474F"
                android:background="#B0BEC5"
                android:text="@string/mike_penz_apache_2_0"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:gravity="left"
                android:textColor="#78909C"
                android:textStyle="bold"
                android:text="@string/iconics_drawer_header"/>
            <TextView
                android:id="@+id/android_iconics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textColor="#37474F"
                android:background="#B0BEC5"
                android:text="@string/mike_penz_apache_2_0"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:gravity="left"
                android:textColor="#78909C"
                android:textStyle="bold"
                android:text="@string/leak_canary_header"/>
            <TextView
                android:id="@+id/leak_canary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textColor="#37474F"
                android:background="#B0BEC5"
                android:text="@string/leak_canary_2_0"/>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"></LinearLayout>
        </LinearLayout>

    </ScrollView>



</LinearLayout>
